# Recommendarr

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.unraid.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: health.py  recommendations.py  setup.py  users.py  webhooks.py
backend/app/clients/: base.py  plex.py  tautulli.py  tmdb.py
backend/app/models/: __init__.py  tables.py
backend/app/services/: embedding.py  explanations.py  integration_probe.py  recommender.py  taste_profiler.py  tmdb_sync.py
backend/migrations/: env.py
backend/tests/: test_live_integration.py
docs/: RECOMMENDARR-PROJECT.md
