[project]
name = "recommendarr"
version = "0.1.0"
description = "AI-powered personal media recommendation engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Ray DiRenzo"}]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # HTTP client
    "httpx>=0.27.0",
    
    # Vector DB
    "chromadb-client>=0.5.0",
    
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.2.0",
    
    # Notifications
    "apprise>=1.8.0",
    
    # Utilities
    "orjson>=3.10.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn>=22.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "httpx",  # for TestClient
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
